# django-dbbackup-admin

./: .env  .env.example  .gitignore  MANIFEST.in  README.rst  boot_django.py  load_tests.py  requirements.txt  setup.cfg
backup_admin/: admin.py  apps.py  jobs.py  models.py  tests.py  urls.py  views.py
backup_admin/templates/admin/: base_site.html
backup_admin/templates/admin/backup_admin/backup/: load_backups.html  restore_confirm.html  submit_line.html
sample_project/: README.md
sample_project/sample_project/: settings.py  urls.py
