# setup.cfg

[metadata]
name = django-backup-admin
version = 0.1
description = Create and manage backups through admin panel
long_description = file:README.rst
url = https://github.com/kumanik5661/django-dbbackup-admin/
author=Nikhil Kumar
author_email=nikhil.kumar.92219@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
include_package_data = true
packages=find:
python_requires = >=3.8
install_requires =
    Django>=4.1.7
    django-dbbackup>=4.0.2
    django-extensions>=3.2.1
